--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <!-- ヘッダー -->
+        <header>
+            <!-- ロゴ -->
+            <a href="index.html" id="logo"><img src="images/logo.png" alt="トップページへ戻る"></a>
+
+            <!-- PC用ナヴィゲーション -->
+            <nav id="nav-pc">
+                <a href="mission.html">MISSION</a>
+                <a href="product.html">PRODUCT</a>
+                <a href="index.html#aboutus">ABOUT US</a>
+                <a href="index.html#vision">VISION</a>
+                <a href="index.html#company">COMPANY</a>
+                <a href="index.html#contact">CONTACT</a>
+            </nav>
+        </header>
 
     </body>
 </html>
