index.html mainvisual,style.css nav

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <!-- ロゴ -->
             <a href="index.html" id="logo"><img src="images/logo.png" alt="トップページへ戻る"></a>
 
-            <!-- PC用ナヴィゲーション -->
+            <!-- PC用ナビゲーション -->
             <nav id="nav-pc">
                 <a href="mission.html">MISSION</a>
                 <a href="product.html">PRODUCT</a>
@@ -23,6 +23,19 @@
                 <a href="index.html#contact">CONTACT</a>
             </nav>
         </header>
+        <main>
+            <article>
+                <!-- メインビジュアル -->
+                <section id="main-visual">
+                    <div id="main-message">
+                        <h1>WORLD PEACE</h1>
+                        <p>IT教育で世界平和を実現する</p>
+                        <img src="images/index/index-main.png" alt="PCの周りに集まる多国籍の仲間たち">
+                    </div>
+
+                </section>
+            </article>
+        </main>
 
     </body>
 </html>
