--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
                     </div>
                     <img src="images/index/index-main.png" alt="PCの周りに集まる多国籍の仲間たち">
                 </section>
+                <!-- ミッション -->
+                <section id="mission">
+                    <h2 class="index-h2">MISSION</h2>
+                    <div id="mission-flex">
+                        <div>
+                            <img id="mission-photo" src="images/index/index-mission.png" alt="屋外のベンチで写真を撮影する多国籍の仲間たち">
+                            <h3>世界平和の実現</h3>
+                            <p>
+                                人類の悲願である世界平和。世界平和を脅かす様々な社会問題を解決するためには、イノベーションをどんどん起こしていく必要があります。SocialTechは、プログラミング教育を通してイノベーターを輩出することで、世界平和という大きなテーマに挑んでいきます。
+                            </p>
+                        </div>
+                        <div></div>
+                    </div>
+                </section>
             </article>
         </main>
 
