--- a/index.html
+++ b/index.html
@@ -44,7 +44,14 @@
                                 人類の悲願である世界平和。世界平和を脅かす様々な社会問題を解決するためには、イノベーションをどんどん起こしていく必要があります。SocialTechは、プログラミング教育を通してイノベーターを輩出することで、世界平和という大きなテーマに挑んでいきます。
                             </p>
                         </div>
-                        <div></div>
+                        <div>
+                            <img id="s2dgs" src="images/index/s2dgs.png" alt="S2DGS">
+                            <h3>S2DGSの実現</h3>
+                            <p>国連が掲げる「Sustainable Development Goals（持続可能な開発目標）」に含まれる17つのグローバル目標のうち、以下の5つの目標の実現をミッションとしてサービスを展開しています。</p>
+                            <a href="mission.html">
+                                <img src="images/button-more.png" alt="もっとみる">
+                            </a>
+                        </div>
                     </div>
                 </section>
             </article>
