created product-left html

--- a/index.html
+++ b/index.html
@@ -54,6 +54,35 @@
                         </div>
                     </div>
                 </section>
+                <section id="product">
+                    <h2 class="index-h2">PRODUCT</h2>
+                    <div>
+                        <div id="product-left">
+                            <div>
+                                <img class="product-photo" src="images/index/index-mantoman.png" alt="PCでコードを書く男性">
+                                <div class="product-explain">
+                                    <span>MAN TO MAN</span>
+                                    <h3>プログラミング教育</h3>
+                                    <p>2013念より日本で唯一の専属講師によるマンツーマンのプログラミングレッスンを開始。AI/人工知能やウェブデザインの学習も可能です。</p>
+                                </div>
+                            </div>
+                            <div>
+                                <img class="product-photo" src="images/index/index-career.png" alt="笑顔で話し合う二人の男性">
+                                <div class="produxt-expla">
+                                    <span>CAREER</span>
+                                    <h3>人材紹介事業</h3>
+                                    <p>エンジニアへの転職に特化した履歴書や職務経歴書のアドバイスや面接対策を行い、豊富な求人の中から最適なキャリア選択を支援します。</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="product-right">
+                            <div>
+                                <img class="product-photo" src="images/index/index-media.png" alt="スマートフォンを操作する人">
+                                <div class="product-explain"></div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </article>
         </main>
 
