created inded.html product

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             </div>
                             <div>
                                 <img class="product-photo" src="images/index/index-career.png" alt="笑顔で話し合う二人の男性">
-                                <div class="produxt-expla">
+                                <div class="produxt-explain">
                                     <span>CAREER</span>
                                     <h3>人材紹介事業</h3>
                                     <p>エンジニアへの転職に特化した履歴書や職務経歴書のアドバイスや面接対策を行い、豊富な求人の中から最適なキャリア選択を支援します。</p>
@@ -78,9 +78,26 @@
                         <div id="product-right">
                             <div>
                                 <img class="product-photo" src="images/index/index-media.png" alt="スマートフォンを操作する人">
-                                <div class="product-explain"></div>
+                                <div class="product-explain">
+                                    <span>MEDIA</span>
+                                    <h3>プログラミング学習メディア</h3>
+                                    <p>月間200万人に読まれる日本最大級のプログラミング学習サイト「SocialTech Blog」やYouTubeチャンネルにて学習情報を発信しています。</p>      
+                                </div>
+                            </div>
+                            <div>
+                                <img class="product-photo" src="images/index/index-b2b.png" alt="講演中の男性とそれを聞く人々">
+                                <div class="product-explain">
+                                    <span>B2B</span>
+                                    <h3>法人研修事業</h3>
+                                    <p>社員のスキルアップ・資格取得・福利厚生を目的としたプログラミング法人研修。貴社の事業モデルに合わせた研修内容の提案を致します。</p>
+                                </div>
                             </div>
                         </div>
+                    </div>
+                    <div>
+                        <a id="product-more" href="product.html">
+                            <img src="images/button-more.png" alt="もっと見る">
+                        </a>
                     </div>
                 </section>
             </article>
