--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
                         </a>
                     </div>
                 </section>
+                <section id="aboutus">
+                    <h2 class="index-h2">ABOUT US</h2>
+                    <h3>3つの組織文化</h3>
+                    <div></div>
+                </section>
             </article>
         </main>
 
